test/invalid/row-func.js
function f(obj) {
    var x = obj.stuff;
    return 2;
};
f({});
